# claude-code-sleep-preventer

./: .gitignore  AGENTS.md  AppIcon.icns  CLAUDE.md  Cargo.toml  ClaudeSleepPreventer-2.1.4.pkg  ClaudeSleepPreventer-app.pkg  ClaudeSleepPreventer-cli.pkg  ClaudeSleepPreventer-unsigned.pkg  Info.plist  Install.command  README.md  SUDOERS_SETUP.md  build-dmg.sh  component.plist  distribution-synth.xml  distribution.xml  install.sh  uninstall.sh
ClaudeSleepPreventer.app/Contents/: CodeResources  Info.plist
ClaudeSleepPreventer.app/Contents/MacOS/: claude-sleep-preventer  claude-sleep-preventer-bin
app-root/Applications/ClaudeSleepPreventer.app/Contents/: Info.plist
app-root/Applications/ClaudeSleepPreventer.app/Contents/MacOS/: claude-sleep-preventer  claude-sleep-preventer-bin
app-root/Applications/ClaudeSleepPreventer.app/Contents/_CodeSignature/: CodeResources
app-scripts/: postinstall
hooks/: allow-sleep.sh  prevent-sleep.sh  thermal-monitor.sh
installer/: install-headless.sh  install.applescript
pkg-scripts/: postinstall
release-notes/: 3.0.3.md  4.0.0.md  4.0.1.md  4.0.2.md
scripts/: clean-ccsp.sh
src/: authorization.rs  logging.rs  main.rs  native_dialogs.rs  objc_utils.rs
src/dictation/: audio.rs  globe_key.rs  mod.rs  onboarding.rs  overlay.rs  text_injection.rs  transcription.rs
src/popover/: mod.rs  ui.rs
src/settings/: mod.rs  window.rs
swift/: globe-listener.swift  menubar.swift
swiftbar/: claude-sleep-status.1s.sh
xtask/: Cargo.toml
xtask/src/: main.rs
