[package]
name = "claude-sleep-preventer"
version = "2.2.7"
edition = "2021"
description = "Keep your Mac awake while Claude Code is working"
license = "MIT"
repository = "https://github.com/CharlonTank/claude-code-sleep-preventer"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.31"
dirs = "5"
anyhow = "1"
serde_json = "1"
tao = "0.30"
tray-icon = "0.17"
io-kit-sys = "0.5.0"
core-foundation = "0.10.1"
mach2 = "0.6.0"
global-hotkey = "0.7"
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
