[workspace]
members = [".", "xtask"]

[package]
name = "agents-sleep-preventer"
version = "4.0.0"
edition = "2021"
description = "Keep your Mac awake while coding agents are working"
license = "MIT"
repository = "https://github.com/CharlonTank/agents-sleep-preventer"

[[bin]]
name = "asp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.31"
dirs = "5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.30"
tray-icon = "0.21"
io-kit-sys = "0.5.0"
core-foundation = "0.10.1"
mach2 = "0.6.0"
global-hotkey = "0.7"
libc = "0.2"

# Dictation feature
cpal = "0.15"       # Audio recording
hound = "3.5"       # WAV file writing
objc = "0.2"        # Objective-C runtime
block = "0.1"       # Objective-C blocks for completion handlers
core-graphics = "0.24"  # CGEventTap for key monitoring
dispatch = "0.2"

[features]
cargo-clippy = []

[profile.release]
strip = true
lto = true
codegen-units = 1
